--- a/projects.html
+++ b/projects.html
@@ -18,18 +18,20 @@
             <li><a href="about.html" target="_blank">Home</a></li>
             <li><a href="AboutMe.html" target="_blank">About Me</a></li>
             <li><a href="courses.html" target="_blank">Courses/Certifications</a></li>
+            <li><a href="contact.html" target="_blank">Contact</a></li>
             <li class="projects">   
                 <span>Work <ion-icon class="chevron-down-outline" name="chevron-down-outline"></ion-icon> </span>
                 <ul class="projects-sub-menu">
-                    <li><a href="projects.html" target="_blank">Adobe Captivate</a></li>
-                    <li><a href="projects.html" target="_blank">Articulate 360</a></li>
-                    <li><a href="projects.html" target="_blank">Articulate Storyline</a></li>
-                    <li><a href="projects.html" target="_blank">Infographics/Flyers</a></li>
-                    <li><a href="projects.html" target="_blank">Presentations</a></li>
-            <li><a href="contact.html" target="_blank">Contact</a></li>
+                    <li><a href="Adobe.html" target="_blank">Adobe Captivate</a></li>
+                    <li><a href="360.html" target="_blank">Articulate 360</a></li>
+                    <li><a href="storyline.html" target="_blank">Articulate Storyline</a></li>
+                    <li><a href="flyers.html" target="_blank">Infographics/Flyers</a></li>
+                    <li><a href="presentation.html" target="_blank">Presentations</a></li>
+            
            
                 </ul>
         </ul>
     </aside>
+
 </body>
 </html>
